@@ -1,3 +1,8 @@
+2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/filterlatex.cpp (FilterLatex::AdjustText):
+	  - Drop unnecessary vars "tmpInput" and "tmpOutput".
+
 2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Adjust source.
